--- a/VIDEOGAMESSUPER/VIDEOGAMESSUPER.csproj
+++ b/VIDEOGAMESSUPER/VIDEOGAMESSUPER.csproj
@@ -18,4 +18,7 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
 </Project>
