fin de la mise en place jwt

--- a/VIDEOGAMESSUPER/VIDEOGAMESSUPER.csproj
+++ b/VIDEOGAMESSUPER/VIDEOGAMESSUPER.csproj
@@ -17,8 +17,8 @@
     <ProjectReference Include="..\LOCAL\LOCAL.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
+    <ProjectReference Include="..\Token.tools\Token.tools.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
