modification compte utilisateur

--- a/VIDEOGAMESSUPER/appsettings.Development.json
+++ b/VIDEOGAMESSUPER/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=VIDEOGAMESSUPER;User Id=SA;Password=Y3s0fC0uRs3;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
