--- a/VIDEOGAMESSUPER/appsettings.json
+++ b/VIDEOGAMESSUPER/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=VIDEOGAMESSUPER;User Id=SA;Password=Y3s0fC0uRs3;"
+    "DefaultConnection": "Server=db;Database=Docker;User=sa;Password=Password1;"
   },
   "Jwt": {
     "LifeTime": 120,
